Fixed profile spacing. Change entry summary to link to user profile.

--- a/mt-static/plugins/MidCenturyMajordojo/profile.css
+++ b/mt-static/plugins/MidCenturyMajordojo/profile.css
@@ -125,6 +125,7 @@
       width: 100%;
       display: block;
       border-bottom: 1px solid #CCCCCC;
+      margin-top: 20px;
 }
 
 /* Actions Listing ---------------------------------------------------------------------------------- */
